==================== 2.19.3 ====================

2007-05-25  Vincent Untz  <vuntz@gnome.org>

	* window-list.c: (applet_size_request): add an assert

2007-05-18  Vincent Untz  <vuntz@gnome.org>

	* window-menu.c: (window_menu_applet_fill): updated for libwnck API
	change

2007-05-18  Vincent Untz  <vuntz@gnome.org>

	* window-list.schemas.in: change default to never group windows. This
	is a try for 2.19, to see how people react.

==================== 2.19.2 ====================

2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* window-list.c: (response_cb), (display_help_dialog):
	* workspace-switcher.c: (response_cb), (display_help_dialog):
	Use help from the user guide since it was migrated there. Also,
	always use wncklet_display_help()
	Fix bugs #415899 and #415896.
	Based on patch by Karderio <karderio@gmail.com>

2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: install data in $(datadir)/gnome-panel/ instead of
	$(datadir)/gnome/panel/
	Fix bug #436461

==================== 2.18.1 ====================

==================== 2.18.0 ====================

==================== 2.17.92 ====================

2007-02-21  Vincent Untz  <vuntz@gnome.org>

	* workspace-switcher.c: (num_workspaces_value_changed): modify the
	timer step of the spin button so that it doesn't go too fast
	(setup_dialog): don't set the increments of the spon button
	Better fix for bug #336731

2007-02-21  Vincent Untz  <vuntz@gnome.org>

	* workspace-switcher.c: (update_workspaces_model): don't change the
	spin button if it's the same value
	(workspace_renamed): don't call update_workspaces_model(), but only
	update the name of the renamed workspace in the treeview
	That makes a big perf improvement when a11y is enabled.

2007-02-21  Vincent Untz  <vuntz@gnome.org>

	* workspace-switcher.c: (applet_scroll): make it correctly work in RTL
	environments. Fix bug #407226

==================== 2.17.91 ====================

==================== 2.17.90 ====================
