@@ -1,3 +1,7 @@
+2007-06-14  Vincent Untz  <vuntz@gnome.org>
+
+	* wncklet.c: (wncklet_set_tooltip): migrate to GtkTooltip
+
 ==================== 2.19.3 ====================
 
 2007-05-25  Vincent Untz  <vuntz@gnome.org>
